--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,114 @@
 ---
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
+title: "Peer-graded Assignment: Course Project 1"
+output: html_notebook
 ---
 
+###Loading and preprocessing the data
 
-## Loading and preprocessing the data
+1. Load the data (i.e. \color{red}{\verb|read.csv()|}read.csv())
+
+```{r}
+activity <- read.csv("/Users/yehudibaptiste/downloads/activity.csv", as.is = TRUE)
+```
+
+2. Process/transform the data (if necessary) into a format suitable for your analysis
+```{r , echo=TRUE}
+clean_data <- good_act <- activity[complete.cases(activity), ]
+```
+
+3. Inspect the clean data
+```{r , echo = TRUE}
+summary(clean_data)
+head(clean_data)
+```
+
+###What is mean total number of steps taken per day?
+1. Calculate the total number of steps taken per day
+```{r, echo =TRUE}
+daily_steps <- aggregate(steps ~ date, clean_data, sum)
+```
+
+2. Make a histogram of the total number of steps taken each day
+```{r ,echo=TRUE}
+hist(daily_steps$steps, main = "Histogram of total number of steps per day", xlab = "Steps per day")
+```
+
+3. Calculate and report the mean and median of the total number of steps taken per day
+```{r ,echo=TRUE}
+(mean(daily_steps$steps))
+(median(daily_steps$steps))
+```
+
+###What is the average daily activity pattern?
+
+1. Make a time series plot (i.e. \color{red}{\verb|type = "l"|}type="l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
+```{r, echo=TRUE}
+average_daily_steps_interval <- aggregate(steps ~ interval, clean_data, mean)
+plot(average_daily_steps_interval$interval, average_daily_steps_interval$steps, type='l', col=1, main="Average number of steps by Interval", xlab="Time Intervals", ylab="Average number of steps")
+```
+
+2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+```{r, echo=TRUE}
+highest_average_steps_interval <- which.max(average_daily_steps_interval$steps)
+average_daily_steps_interval[highest_average_steps_interval, ]$interval
+average_daily_steps_interval[highest_average_steps_interval, ]$steps
+```
+
+###Imputing missing values
+1.Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
+```{r, echo=TRUE}
+missingdata <- activity[!complete.cases(activity), ]
+nrow(missingdata)
+```
+
+2. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
+
+3. Create a new dataset that is equal to the original dataset but with the missing data filled in.
+
+```{r, echo=TRUE}
+for (i in 1:nrow(activity)) {
+    if(is.na(activity$steps[i])) {
+        val <- average_daily_steps_interval$steps[which(average_daily_steps_interval$interval == activity$interval[i])]
+        activity$steps[i] <- val 
+    }
+}
+```
+
+4. Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
+```{r, echo=TRUE}
+hist(new_daily_steps$steps, main = "Histogram of total number of steps per day (with new data)", xlab = "Steps per day")
+mean(new_daily_steps$steps)
+median(new_daily_steps$steps)
+```
+
+###Are there differences in activity patterns between weekdays and weekends?
+1. Create a new factor variable in the dataset with two levels -- "weekday" and "weekend" indicating whether a given date is a weekday or weekend day.
+```{r}
+week_day <- function(date_val) {
+    wd <- weekdays(as.Date(date_val, '%Y-%m-%d'))
+    if  (!(wd == 'Saturday' || wd == 'Sunday')) {
+        x <- 'Weekday'
+    } else {
+        x <- 'Weekend'
+    }
+    x
+}
+```
 
 
 
-## What is mean total number of steps taken per day?
+2. Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). The plot should look something like the following, which was created using simulated data:
 
+```{r}
+activity$day_type <- as.factor(sapply(activity$date, week_day))
+library(ggplot2)
+new_daily_steps<- aggregate(steps ~ interval+day_type, activity, mean)
+plt <- ggplot(new_daily_steps, aes(interval, steps)) +
+    geom_line(stat = "identity", aes(colour = day_type)) +
+    theme_gray() +
+    facet_grid(day_type ~ ., scales="fixed", space="fixed") +
+    labs(x="Interval", y=expression("No of Steps")) +
+    ggtitle("No of steps Per Interval by day type")
+print(plt)
+```
 
-
-## What is the average daily activity pattern?
-
-
-
-## Imputing missing values
-
-
-
-## Are there differences in activity patterns between weekdays and weekends?
