--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,6 +1,8 @@
 ---
-title: "Peer-graded Assignment: Course Project 1"
-output: html_notebook
+title: 'Peer-graded Assignment: Course Project 1'
+output:
+  html_document:
+    df_print: paged
 ---
 
 ###Loading and preprocessing the data
@@ -8,7 +10,7 @@ output: html_notebook
 1. Load the data (i.e. \color{red}{\verb|read.csv()|}read.csv())
 
 ```{r}
-activity <- read.csv("/Users/yehudibaptiste/downloads/activity.csv", as.is = TRUE)
+activity <- read.csv("/Users/yehudibaptiste/desktop/r programming/activity.csv", as.is = TRUE)
 ```
 
 2. Process/transform the data (if necessary) into a format suitable for your analysis
@@ -63,8 +65,6 @@ nrow(missingdata)
 
 2. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
 
-3. Create a new dataset that is equal to the original dataset but with the missing data filled in.
-
 ```{r, echo=TRUE}
 for (i in 1:nrow(activity)) {
     if(is.na(activity$steps[i])) {
@@ -73,17 +73,25 @@ for (i in 1:nrow(activity)) {
     }
 }
 ```
+3. Create a new dataset that is equal to the original dataset but with the missing data filled in.
+```{r, echo=TRUE}
+new_daily_steps <- aggregate(steps ~ date, activity, sum)
+```
+
 
 4. Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
 ```{r, echo=TRUE}
-hist(new_daily_steps$steps, main = "Histogram of total number of steps per day (with new data)", xlab = "Steps per day")
+hist(new_daily_steps$steps, main = "Histogram of total number of steps per day", xlab = "Steps per day")
+```
+
+```{r, echo=TRUE}
 mean(new_daily_steps$steps)
 median(new_daily_steps$steps)
 ```
 
 ###Are there differences in activity patterns between weekdays and weekends?
 1. Create a new factor variable in the dataset with two levels -- "weekday" and "weekend" indicating whether a given date is a weekday or weekend day.
-```{r}
+```{r, echo=TRUE}
 week_day <- function(date_val) {
     wd <- weekdays(as.Date(date_val, '%Y-%m-%d'))
     if  (!(wd == 'Saturday' || wd == 'Sunday')) {
@@ -99,7 +107,7 @@ week_day <- function(date_val) {
 
 2. Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). The plot should look something like the following, which was created using simulated data:
 
-```{r}
+```{r, echo=TRUE}
 activity$day_type <- as.factor(sapply(activity$date, week_day))
 library(ggplot2)
 new_daily_steps<- aggregate(steps ~ interval+day_type, activity, mean)
