--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,8 +1,8 @@
 ---
-title: 'Peer-graded Assignment: Course Project 1'
+title: 'PA1_Template'
 output:
-  html_document:
-    df_print: paged
+  md_document:
+    variant: markdown_github
 ---
 
 ###Loading and preprocessing the data
